--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,22 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    //absolute import
-    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@ui/*": ["./src/components/ui/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@api/*": ["./src/api/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@types*": ["./src/types.ts"],
+      "@theme*": ["./src/theme.tsx"],
+      "@layouts/*": ["./src/layouts/*"],
+      "@services/*": ["./src/services/*"]
+    },
+    "types": ["vite-plugin-svgr/client"]
   },
-  "include": ["src", "./jest.setup.ts"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
