--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     },
     "dependencies": {
         "@types/axios": "^0.14.0",
+        "@types/react-copy-to-clipboard": "^5.0.7",
         "@types/react-select": "^5.0.1",
         "axios": "^1.6.7",
         "react": "^18.2.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-select": "^5.8.0",
         "vite-plugin-svgr": "^4.2.0",
