--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
         "@types/react-copy-to-clipboard": "^5.0.7",
         "@types/react-select": "^5.0.1",
         "axios": "^1.6.7",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-svg-transformer": "^1.0.0",
         "react": "^18.2.0",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
@@ -30,15 +34,16 @@
         "@types/jest": "^29.5.12",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
+        "@types/testing-library__jest-dom": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/ui": "^1.3.1",
         "autoprefixer": "^10.4.18",
         "eslint": "^8.56.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
+        "jsdom": "^24.0.0",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "ts-jest": "^29.1.2",
