--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -35,6 +34,11 @@
         },
         "types": ["vite-plugin-svgr/client"]
     },
-    "include": ["src", "src/__tests__", "src/environment.d.ts"],
+    "include": [
+        "src",
+        "src/__tests__",
+        "src/environment.d.ts",
+        "jest-setup.ts"
+    ],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
